--- a/zhaoyu_base-autocode/src/main/resources/templates/page/autoCode.html
+++ b/zhaoyu_base-autocode/src/main/resources/templates/page/autoCode.html
@@ -47,7 +47,7 @@
 		 	data() {
 		    	return {
 		    		path:"D:/code",
-		    		packageName:"com.meicai.springboot.autocode",
+		    		packageName:"com.zhaoyu.base.autocode",
 		    		tableSchema:"",
 		    		tableNames:[],
 		    		tableSchemaOptions:[],
